--- a/panel/src/app/campaign/editcampaign/editcampaign.component.html
+++ b/panel/src/app/campaign/editcampaign/editcampaign.component.html
@@ -9,18 +9,18 @@
                 <!-- ============================================================== -->
                 <!-- column -->
                 <!-- ============================================================== -->
-                <form class="basic-form">
+                <form class="basic-form" (ngSubmit)="onSubmit()" #EditCampaignForm="ngForm">
                 <div fxLayout="row" fxLayoutWrap="wrap">
                     <!-- column -->
                     <div fxFlex.gt-md="100" fxFlex="100">
                       <mat-form-field>
-                        <input matInput placeholder="Enter Campaign" value="{{row.name}}">
+                        <input matInput placeholder="Enter Campaign" [(ngModel)]="campaigndata.name" id="name" name="name" value="{{ row.name }}">
                       </mat-form-field>
                     </div>
                     <!-- Supplier -->
                     <div fxFlex.gt-sm="100" fxFlex="100">
                       <mat-form-field  *ngIf="foundsupplier">
-                        <mat-select placeholder="Select Supplier">
+                        <mat-select placeholder="Select Supplier" [(ngModel)]="campaigndata.provider" id="supplier" name="supplier">
                           <mat-option value="option">Select Supplier</mat-option>
                           <mat-option *ngFor="let s of supplier" ng-value="s.value">{{s.label}}</mat-option>
                         </mat-select>
@@ -29,7 +29,7 @@
                     <!-- Message -->
                     <div fxFlex.gt-sm="100" fxFlex="100">
                       <mat-form-field *ngIf="foundmessage">
-                        <mat-select placeholder="Select Message">
+                        <mat-select placeholder="Select Message" [(ngModel)]="campaigndata.message" id="message" name="message">
                           <mat-option value="-1">Select Message</mat-option>
                           <mat-option *ngFor="let m of message" ng-value="m.value">{{m.label}}</mat-option>
                         </mat-select>
@@ -38,81 +38,81 @@
                     <!-- column -->
                     <div fxFlex.gt-sm="100" fxFlex="100">
                       <mat-form-field>
-                        <input matInput placeholder="Display ANI / Caller ID">
+                        <input matInput placeholder="Display ANI / Caller ID" [(ngModel)]="campaigndata.cid" id="cid" name="cid">
                       </mat-form-field>
                     </div>
                     <!-- column -->
                     <div fxFlex.gt-sm="100" fxFlex="100">
                       <mat-form-field>
-                        <input matInput placeholder="Maximum Call Ring Time">
+                        <input matInput placeholder="Maximum Call Ring Time" [(ngModel)]="campaigndata.ringtime" id="ringtime" name="ringtime">
                       </mat-form-field>
                     </div>
                     <!-- column -->
                     <div fxFlex.gt-sm="100" fxFlex="100">
                       <mat-form-field>
-                        <input matInput placeholder="Maximum Call Answer Time">
+                        <input matInput placeholder="Maximum Call Answer Time" [(ngModel)]="campaigndata.answertime" id="answertime" name="answertime">
                       </mat-form-field>
                     </div>
                       <!-- column -->
                     <div fxFlex.gt-sm="100" fxFlex="100">
                       <mat-form-field>
-                        <input matInput placeholder="Total number of Ports allowed">
+                        <input matInput placeholder="Total number of Ports allowed" [(ngModel)]="campaigndata.channel" id="channel" name="channek">
                       </mat-form-field>
                     </div>
                     <!-- column -->
                     <div fxFlex.gt-sm="100" fxFlex="100">
                       <mat-form-field>
-                        <input matInput placeholder="Dialing per Minutes">
+                        <input matInput placeholder="Dialing per Minutes" [(ngModel)]="campaigndata.ppm" id="ppm" name="ppm">
                       </mat-form-field>
                     </div>
                     <!-- column -->
-                    <div fxFlex.gt-sm="100" fxFlex="100">
+                    <div fxFlex.gt-sm="34" fxFlex.gt-xs="34" fxFlex="100">
                       <mat-form-field>
-                        <input matInput [matDatepicker]="startdate" placeholder="Choose a Start Date">
+                        <input matInput [matDatepicker]="startdate" placeholder="Choose a Start Date" [(ngModel)]="campaigndata.startdate" id="startdate" name="startdate">
                         <mat-datepicker-toggle matSuffix [for]="startdate"></mat-datepicker-toggle>
                         <mat-datepicker #startdate></mat-datepicker>
                       </mat-form-field>
                     </div>
                     <!-- column -->
-                    <div fxFlex.gt-sm="100" fxFlex="100">
+                    <div fxFlex.gt-sm="33" fxFlex.gt-xs="33" fxFlex="100">
                       <mat-form-field>
-                        <input matInput [matDatepicker]="enddate" placeholder="Choose a End Date">
-                        <mat-datepicker-toggle matSuffix [for]="enddate"></mat-datepicker-toggle>
-                        <mat-datepicker #enddate></mat-datepicker>
-                      </mat-form-field>
-                    </div>
-                    <!-- column -->
-                    <div fxFlex.gt-sm="100" fxFlex="100">
-                      <mat-form-field>
-                        <mat-select placeholder="Select Start Hours">
-                          <mat-option value="-1">Select Message</mat-option>
+                        <mat-select placeholder="Select Start Hours" [(ngModel)]="campaigndata.starthr" id="starthr" name="starthr">
+                          <mat-option value="-1">Select Hour</mat-option>
                           <mat-option *ngFor="let hr of hour" ng-value="hr">{{hr}}</mat-option>
                         </mat-select>
                       </mat-form-field>
                     </div>
                     <!-- column -->
-                    <div fxFlex.gt-sm="100" fxFlex="100">
+                    <div fxFlex.gt-sm="33" fxFlex.gt-xs="33" fxFlex="100">
                       <mat-form-field>
-                        <mat-select placeholder="Select End Hours">
-                          <mat-option value="-1">Select Message</mat-option>
-                          <mat-option *ngFor="let hr of hour" ng-value="hr">{{hr}}</mat-option>
-                        </mat-select>
-                      </mat-form-field>
-                    </div>
-                    <!-- column -->
-                    <div fxFlex.gt-sm="100" fxFlex="100">
-                      <mat-form-field>
-                        <mat-select placeholder="Select Start Minutes">
-                          <mat-option value="-1">Select Message</mat-option>
+                        <mat-select placeholder="Select Start Minutes" [(ngModel)]="campaigndata.startmin" id="startmin" name="startmin">
+                          <mat-option value="-1">Select Minutes</mat-option>
                           <mat-option *ngFor="let min of minutes" ng-value="min">{{min}}</mat-option>
                         </mat-select>
                       </mat-form-field>
                     </div>
                     <!-- column -->
-                    <div fxFlex.gt-sm="100" fxFlex="100">
+                    <div fxFlex.gt-sm="34" fxFlex.gt-xs="34" fxFlex="100">
                       <mat-form-field>
-                        <mat-select placeholder="Select End Minutes">
-                          <mat-option value="-1">Select Message</mat-option>
+                        <input matInput [matDatepicker]="enddate" placeholder="Choose a End Date" [(ngModel)]="campaigndata.enddate" id="enddate" name="enddate">
+                        <mat-datepicker-toggle matSuffix [for]="enddate"></mat-datepicker-toggle>
+                        <mat-datepicker #enddate></mat-datepicker>
+                      </mat-form-field>
+                    </div>
+                    <!-- column -->
+                    <div fxFlex.gt-sm="33" fxFlex.gt-xs="33" fxFlex="100">
+                      <mat-form-field>
+                        <mat-select placeholder="Select End Hours" [(ngModel)]="campaigndata.endhr" id="endhr" name="endhr">
+                          <mat-option value="-1">Select Hours</mat-option>
+                          <mat-option *ngFor="let hr of hour" ng-value="hr">{{hr}}</mat-option>
+                        </mat-select>
+                      </mat-form-field>
+                    </div>
+                    <!-- column -->
+                    <div fxFlex.gt-sm="33" fxFlex.gt-xs="33" fxFlex="100">
+                      <mat-form-field>
+                        <mat-select placeholder="Select End Minutes" [(ngModel)]="campaigndata.endmin" id="endmin" name="endmin">
+                          <mat-option value="-1">Select Minutes</mat-option>
                           <mat-option *ngFor="let min of minutes" ng-value="min">{{min}}</mat-option>
                         </mat-select>
                       </mat-form-field>
@@ -120,12 +120,12 @@
                     <!-- column -->
                     <div fxFlex.gt-sm="100" fxFlex="100">
                         <mat-form-field>
-                          <input matInput placeholder="Campaign Descriptions">
+                          <input matInput placeholder="Campaign Descriptions" [(ngModel)]="campaigndata.description" id="description" name="description">
                         </mat-form-field>
                       </div>
                     <!-- column -->
                     <div fxFlex.gt-sm="100" fxFlex="100">
-                      <button mat-raised-button color="primary">Submit</button>
+                      <button mat-raised-button color="primary" type="submit">Submit</button>
                     </div> 
                 </div>
                 </form>      
