--- a/panel/src/app/supplier/listsupplier/listsupplier.component.html
+++ b/panel/src/app/supplier/listsupplier/listsupplier.component.html
@@ -1,3 +1,46 @@
-<p>
-  listsupplier works!
-</p>
+
+
+<div fxLayout="row" fxLayoutWrap="wrap">
+<div fxFlex.gt-sm="100" fxFlex.gt-xs="100" fxFlex="100">
+  <mat-card>
+    <mat-card-content> 
+      <div class="example-header">
+        <mat-form-field>
+          <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+        </mat-form-field>
+      </div>
+      <div class="table-rasponsive">
+          <mat-table #table [dataSource]="dataSource" matSort>
+              
+              <ng-container matColumnDef="name">
+                <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
+                <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
+              </ng-container>
+ 
+              <ng-container matColumnDef="ipaddress">
+                <mat-header-cell *matHeaderCellDef> IP Address </mat-header-cell>
+                <mat-cell *matCellDef="let element"> {{element.ipaddress}} </mat-cell>
+              </ng-container>
+
+              <ng-container matColumnDef="prefix">
+                <mat-header-cell *matHeaderCellDef> Prefix </mat-header-cell>
+                <mat-cell *matCellDef="let element"> {{element.prefix}} </mat-cell>
+              </ng-container>
+
+                <ng-container matColumnDef="actions">
+                <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
+                <mat-cell *matCellDef="let row">
+                   
+                    <button mat-raised-button color="primary" (click)="DeleteDetail(row)">Delete</button>
+                </mat-cell>
+              </ng-container> 
+
+              <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+              <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+        </mat-table>
+        <mat-paginator #paginator [pageSize]="10" [pageSizeOptions]="[5, 10, 20]"></mat-paginator>
+      </div>    
+    </mat-card-content>
+  </mat-card>
+  </div>
+</div>
